Updated Proj Itteration 2

--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -7,6 +7,10 @@
 
 <h5 class="mb-3">Admin dashboard</h5>
 
+<a href="/company/task/{{ task.id }}/applicants">
+  View applicants
+</a>
+
 <div class="row g-3">
   <div class="col-md-6">
     <div class="card shadow-sm">
