--- a/templates/student_tasks.html
+++ b/templates/student_tasks.html
@@ -1,5 +1,5 @@
-# code layout is from chatgpt
-# inside is customised with my own code
+<!--code layout is from chatgt-->>
+<!--inside is customised with my own code-->
 
 {% extends "base.html" %}
 {% block content %}
