--- a/templates/admin_disputes.html
+++ b/templates/admin_disputes.html
@@ -1,3 +1,5 @@
+<!--code layout is from chatgpt-->
+<!--inside is customised with my own code-->
 {% extends "base.html" %}
 {% block content %}
 {# admin list view of all disputes #}
