--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,6 @@
+<!--code layout is from chatgpt-->
+<!--inside is customised with my own code-->
+
 <!doctype html>
 <html lang="en" data-theme="dark>
 
