--- a/templates/admin_dispute_new.html
+++ b/templates/admin_dispute_new.html
@@ -1,3 +1,6 @@
+<!--code layout is from chatgpt-->
+<!--inside is customised with my own code-->
+
 {% extends "base.html" %}
 {% block content %}
 {# form for a logged-in user to raise a new dispute #}
