--- a/templates/browse_tasks.html
+++ b/templates/browse_tasks.html
@@ -1,3 +1,7 @@
+<!--code layout is from chatgpt-->
+<!--inside is customised with my own code-->
+
+
 {% extends "base.html" %}
 {% block content %}
 
