--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,5 @@
+<!--code layout is from chatgpt-->
+<!--inside is customised with my own code-->
 {% extends "base.html" %}
 {% block content %}
 {#
